# capital_test_task

./: .env  .env.example  Dockerfile  README.md  app.py  config.py  conftest.py  docker-compose.yml  pyproject.toml
migrations/versions/: 739e35d68c46_add_index_to_string_column.py  c2f355da3bf6_initial_migration.py
string_app/: __init__.py  handlers.py  models.py  schemas.py  test_strings.py
